helm/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transactions
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - transactions.dev.moneypulse.com
      secretName: transactions-tls
  rules:
    - host: transactions.dev.moneypulse.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transactions
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - users.dev.moneypulse.com
      secretName: users-tls
  rules:
    - host: users.dev.moneypulse.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 8080
